Add required flags for jdk16+